--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
 @theme {
-  --color-skin: #B4976C;
-  --color-darkskin: #8C8379
+  --color-skin: #56A3F8;
+  --color-darkskin: #0167AC;
 }
