--- a/output.css
+++ b/output.css
@@ -9,7 +9,6 @@
       "Courier New", monospace;
     --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-yellow-500: oklch(79.5% 0.184 86.047);
-    --color-yellow-600: oklch(68.1% 0.162 75.834);
     --color-yellow-800: oklch(47.6% 0.114 61.907);
     --color-green-50: oklch(98.2% 0.018 155.826);
     --color-green-700: oklch(52.7% 0.154 150.069);
@@ -32,7 +31,6 @@
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-gray-800: oklch(27.8% 0.033 256.848);
-    --color-gray-900: oklch(21% 0.034 264.665);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-4xl: 56rem;
@@ -391,17 +389,11 @@
   .w-6 {
     width: calc(var(--spacing) * 6);
   }
-  .w-8\/12 {
-    width: calc(8/12 * 100%);
-  }
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
   .w-36 {
     width: calc(var(--spacing) * 36);
-  }
-  .w-96 {
-    width: calc(var(--spacing) * 96);
   }
   .w-full {
     width: 100%;
@@ -512,11 +504,11 @@
   .border-gray-500 {
     border-color: var(--color-gray-500);
   }
-  .border-green-700 {
-    border-color: var(--color-green-700);
-  }
   .border-indigo-500 {
     border-color: var(--color-indigo-500);
+  }
+  .border-skin {
+    border-color: var(--color-skin);
   }
   .border-sky-600 {
     border-color: var(--color-sky-600);
@@ -532,9 +524,6 @@
   }
   .bg-darkskin {
     background-color: var(--color-darkskin);
-  }
-  .bg-green-50 {
-    background-color: var(--color-green-50);
   }
   .bg-indigo-50 {
     background-color: var(--color-indigo-50);
@@ -641,6 +630,9 @@
   .pl-5 {
     padding-left: calc(var(--spacing) * 5);
   }
+  .pl-8 {
+    padding-left: calc(var(--spacing) * 8);
+  }
   .text-center {
     text-align: center;
   }
@@ -678,14 +670,6 @@
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
-  }
-  .leading-2 {
-    --tw-leading: calc(var(--spacing) * 2);
-    line-height: calc(var(--spacing) * 2);
-  }
-  .leading-4 {
-    --tw-leading: calc(var(--spacing) * 4);
-    line-height: calc(var(--spacing) * 4);
   }
   .leading-8 {
     --tw-leading: calc(var(--spacing) * 8);
