--- a/output.css
+++ b/output.css
@@ -12,6 +12,7 @@
     --color-yellow-800: oklch(47.6% 0.114 61.907);
     --color-teal-300: oklch(85.5% 0.138 181.071);
     --color-sky-50: oklch(97.7% 0.013 236.62);
+    --color-sky-200: oklch(90.1% 0.058 230.902);
     --color-sky-400: oklch(74.6% 0.16 232.661);
     --color-sky-600: oklch(58.8% 0.158 241.966);
     --color-sky-700: oklch(50% 0.134 242.749);
@@ -509,6 +510,10 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
+  .border-r {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 1px;
+  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
@@ -516,6 +521,10 @@
   .border-b-2 {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 2px;
+  }
+  .border-l {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 1px;
   }
   .border-l-4 {
     border-left-style: var(--tw-border-style);
@@ -532,6 +541,12 @@
   }
   .border-skin {
     border-color: var(--color-skin);
+  }
+  .border-sky-50 {
+    border-color: var(--color-sky-50);
+  }
+  .border-sky-200 {
+    border-color: var(--color-sky-200);
   }
   .border-sky-600 {
     border-color: var(--color-sky-600);
@@ -655,6 +670,9 @@
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
+  }
+  .pb-6 {
+    padding-bottom: calc(var(--spacing) * 6);
   }
   .pb-8 {
     padding-bottom: calc(var(--spacing) * 8);
