--- a/output.css
+++ b/output.css
@@ -289,6 +289,9 @@
   .my-8 {
     margin-block: calc(var(--spacing) * 8);
   }
+  .my-16 {
+    margin-block: calc(var(--spacing) * 16);
+  }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
   }
@@ -330,6 +333,12 @@
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
+  }
+  .mb-16 {
+    margin-bottom: calc(var(--spacing) * 16);
+  }
+  .mb-20 {
+    margin-bottom: calc(var(--spacing) * 20);
   }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
@@ -450,6 +459,9 @@
   }
   .flex-col {
     flex-direction: column;
+  }
+  .flex-row {
+    flex-direction: row;
   }
   .flex-wrap {
     flex-wrap: wrap;
@@ -603,6 +615,9 @@
   .bg-sky-800 {
     background-color: var(--color-sky-800);
   }
+  .bg-sky-900 {
+    background-color: var(--color-sky-900);
+  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -641,6 +656,9 @@
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
+  }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
   }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
@@ -985,6 +1003,11 @@
   .sm\:py-16 {
     @media (width >= 40rem) {
       padding-block: calc(var(--spacing) * 16);
+    }
+  }
+  .sm\:pl-8 {
+    @media (width >= 40rem) {
+      padding-left: calc(var(--spacing) * 8);
     }
   }
   .sm\:text-4xl {
